--- a/stylesheets/app.less
+++ b/stylesheets/app.less
@@ -64,10 +64,12 @@ h1, h2, h3, h4, h5, h6 {
   }
 }
 
-
 .Bacheca {
   width: 100%;
   max-width: 1000px;
   margin: 0 auto;
   padding: 2em;
+}
+
+.RoutePage {
 }
