formcreateanalysis layout and fixes

--- a/stylesheets/app.less
+++ b/stylesheets/app.less
@@ -65,11 +65,11 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .Bacheca {
-  width: 100%;
-  max-width: 1000px;
-  margin: 0 auto;
-  padding: 2em;
+  margin-top: 1em;
 }
 
 .RoutePage {
+  h1 {
+    padding-bottom: .5em;
+  }
 }
