fix params injection in route

--- a/stylesheets/app.less
+++ b/stylesheets/app.less
@@ -1,6 +1,6 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto:400,300,500);
 @import url(https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css);
-
+@import url(https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css);
 
 @green_one:     #9ab459;
 @green_two:     #6eb067;
@@ -72,4 +72,5 @@ h1, h2, h3, h4, h5, h6 {
   h1 {
     padding-bottom: .5em;
   }
+  padding-right: 1em;
 }
