carica le analisi solo la prima volta

--- a/stylesheets/app.less
+++ b/stylesheets/app.less
@@ -74,3 +74,9 @@ h1, h2, h3, h4, h5, h6 {
   }
   padding-right: 1em;
 }
+
+canvas {
+  width: 100%!important;
+  height: 300px;
+  padding: 1em;
+}
